basetextoverlay: just forward the seek event to sink pads like other events

https://bugzilla.gnome.org/show_bug.cgi?id=735844